Cambia a la imagen de DockerHub para updater. Gitignore actualizado

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - "8081:8080"
 
   updater:
-    build: ./updater
+    image: franciscofdez/updater:latest
     container_name: updater
     environment:
       POSTGRES_USER: as
