--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - "8081:8080"
 
   updater:
-    image: franciscofdez/updater:latest
+    build: ./updater
     container_name: updater
     environment:
       POSTGRES_USER: as
