--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - postgres
 
   flask:
-    image: python:latest
+    image: franciscofdez/flask_app:latest
     container_name: flask
     environment:
       POSTGRES_USER: as
@@ -53,11 +53,6 @@ services:
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
     secrets:
       - postgres_password
-    volumes:
-      - ./flask_app:/app
-    working_dir: /app
-    command: >
-      sh -c "pip install --upgrade pip && pip install -r /app/requirements.txt && python /app/app.py"
     ports:
       - "5001:5000"
     depends_on:
