--- a/k8s/flask-service.yaml
+++ b/k8s/flask-service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: flask-service
 spec:
+  type: NodePort
   selector:
     app: flask
   ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 5000
-  type: ClusterIP
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+      nodePort: 30002
